@@ -1,3 +1,9 @@
+2008-08-15  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/support/cairo-support.c: (ge_cairo_pattern_fill):
+	Prevent negative width/height from destroying the patterns for later
+	drawing operations.
+
 2008-08-14  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
